🐛 Fix astro build envrionment

--- a/app/src/layouts/wide.astro
+++ b/app/src/layouts/wide.astro
@@ -14,7 +14,7 @@ const { title, description } = Astro.props;
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
 		<title>{title}</title>
 		<meta name="description" content={description} />
 		<slot name="head" /> <!-- 允许页面注入额外的 head 内容, 比如 CSS 链接 -->
