--- a/app/src/layouts/wide.astro
+++ b/app/src/layouts/wide.astro
@@ -1,5 +1,5 @@
 ---
-import CustomHeader from '../components/header.astro';
+import CustomHeader from '../components/CustomHeader.astro';
 
 interface Props {
 	title: string;
