--- a/app/src/components/CustomHeader.astro
+++ b/app/src/components/CustomHeader.astro
@@ -2,7 +2,7 @@
 // 导入 Starlight 的内部组件，以复用其样式和功能
 import SocialIcons from '@astrojs/starlight/components/SocialIcons.astro';
 import ThemeSelect from '@astrojs/starlight/components/ThemeSelect.astro';
-import { StarlightConfig } from 'virtual:starlight/user-config';
+import StarlightConfig from 'virtual:starlight/user-config';
 
 // 定义视图切换的链接
 const views = [
