--- a/app/src/components/CustomHeader.astro
+++ b/app/src/components/CustomHeader.astro
@@ -4,21 +4,23 @@ import SocialIcons from '@astrojs/starlight/components/SocialIcons.astro';
 import ThemeSelect from '@astrojs/starlight/components/ThemeSelect.astro';
 import StarlightConfig from 'virtual:starlight/user-config';
 
+const basePath = import.meta.env.BASE_URL;
+
 // 定义视图切换的链接
 const views = [
-  { label: 'Doc', href: '/' },
-  { label: 'Table', href: '/table' },
-  { label: 'Kanboard', href: '/kanboard' },
+  { label: 'Doc', href: basePath+'getting-started' },
+  { label: 'Table', href: basePath+'/table' },
+  { label: 'Kanboard', href: basePath+'/kanboard' },
 ];
 ---
 
 <div class="header-container sl-flex">
   <!-- 左侧部分 -->
   <div class="left-items sl-flex">
-    <a href="/" class="site-title">{StarlightConfig.title}</a>
+    <a href={basePath} class="site-title">{StarlightConfig.title}</a>
     <nav class="nav-links">
-      <a href="/" class="nav-link">Detail</a>
-      <a href="/manage" class="manage-button">Manage</a>
+      <a href={basePath} class="nav-link">Detail</a>
+      <a href={basePath+"manage"}  class="manage-button">Manage</a>
       <!-- 您可以在这里添加更多左侧链接 -->
     </nav>
   </div>
